# server

./: .editorconfig  .gitignore  Apocalypse.cpp  BuildItem.cpp  CaptureTheFlag.cpp  Client.cpp  Client.h  Crusade.cpp  DebugDialog.cpp  DynamicObject.cpp  DynamicObject.h  DynamicObjectID.h  Fish.cpp  Game.cpp  Game.h  GlobalDef.h  GuildsMan.cpp  HGserver.sln  HGserver.vcxproj  HGserver.vcxproj.filters  Heldenian.cpp  Item.cpp  Item.h  LICENSE  LICENSE.md  Magic.cpp  Makefile.am  Map.cpp  Map.h  Mineral.cpp  Misc.cpp  Misc.h  Msg.cpp  Msg.h  NetMessages.h  Npc.cpp  Npc.h  Party.cpp  Potion.cpp  Quest.cpp  (+32 more)
.github/: PULL_REQUEST_TEMPLATE.md  config.yml
.github/ISSUE_TEMPLATE/: config.yml
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
droplist/: droplist.json  droplist_original.json
src/: ActionID.h  ChatHandler.cpp  ChatHandler.h  Client.cpp  Client.h  DelayEvent.cpp  DelayEvent.h  GServer.cpp  GServer.h  Gate.cpp  Gate.h  Guild.cpp  Guild.h  Inventory.cpp  Inventory.h  InventoryMgr.cpp  InventoryMgr.h  Item.cpp  Item.h  Items.h  LServer.cpp  LServer.h  Magic.cpp  Magic.h  Map.cpp  Map.h  Misc.cpp  Misc.h  Npc.cpp  Npc.h  Party.cpp  Party.h  PartyMgr.cpp  PartyMgr.h  Server.cpp  Server.h  Skill.cpp  Skill.h  TeleportLoc.h  Tile.cpp  (+80 more)
src/net/: net_handler.cpp  net_handler.hpp  netmessages.hpp  socket.cpp  socket.hpp
src/redisclient/: config.h  redisasyncclient.h  redisbuffer.h  redisparser.h  redissyncclient.h  redisvalue.h  version.h
src/redisclient/impl/: redisasyncclient.cpp  redisclientimpl.cpp  redisclientimpl.h  redisparser.cpp  redissyncclient.cpp  redisvalue.cpp
